--- a/src/app/pages/default-navigation/default-navigation.component.html
+++ b/src/app/pages/default-navigation/default-navigation.component.html
@@ -1,5 +1,5 @@
 <section class="nav-hub">
-  <div class="nav-card">
+  <nz-card class="nav-card" [nzBordered]="false" [nzBodyStyle]="{ padding: '0' }">
     <p class="eyebrow">Escolha a página</p>
     <h1>Navegue pelo site</h1>
     <p class="lead">
@@ -23,5 +23,5 @@
         </div>
       </a>
     </div>
-  </div>
+  </nz-card>
 </section>
