--- a/src/app/pages/consulta-veicular/consulta-veicular.component.scss
+++ b/src/app/pages/consulta-veicular/consulta-veicular.component.scss
@@ -205,27 +205,13 @@ h1 {
   gap: 14px;
 }
 
-.renavam-form .ant-form-item {
-  margin: 0;
-}
-
-.renavam-form .ant-form-item-label {
-  padding: 0;
-}
-
-.renavam-form .ant-form-item-label > label,
-.renavam-form .form-label {
+.renavam-form label {
   font-weight: 700;
   color: #111827;
   display: flex;
   align-items: center;
   gap: 8px;
   font-size: 0.95rem;
-  margin: 0;
-}
-
-.renavam-form .ant-form-item-control-input-content {
-  width: 100%;
 }
 
 .renavam-form small {
