Add return to top button

--- a/src/app/core/components/barcode-form/barcode-form.component.html
+++ b/src/app/core/components/barcode-form/barcode-form.component.html
@@ -9,6 +9,7 @@
       nz-input
       type="text"
       name="barcode"
+      #barcodeInput
       formControlName="barcode"
       inputmode="numeric"
       pattern="\d*"
