--- a/src/app/pages/consulta-veicular/consulta-veicular.component.html
+++ b/src/app/pages/consulta-veicular/consulta-veicular.component.html
@@ -14,11 +14,8 @@
     <div class="form-col" @slideInRight>
       <div class="form-card">
         <div class="form-card__head">
-          <div class="icon-wrap">
-            <i class="fa-solid fa-car-side"></i>
-          </div>
           <div>
-            <p class="eyebrow">Consulta de RENAVAM</p>
+            <p class="eyebrow">Consulte seu RENAVAM</p>
           </div>
           <div class="head-chip">
             <span class="dot"></span>
