--- a/src/app/pages/consulta-veicular/consulta-veicular.component.html
+++ b/src/app/pages/consulta-veicular/consulta-veicular.component.html
@@ -48,7 +48,7 @@
           </div>
           <p class="field-error" *ngIf="renavamError">{{ renavamError }}</p>
 
-          <button type="button" nz-button nzType="primary" class="btn submit" [disabled]="!isRenavamValid">
+          <button type="button" nz-button nzType="primary" class="btn submit" [disabled]="!isRenavamValid" (click)="goToSelectionPage()">
             <i class="fa-solid fa-magnifying-glass"></i>
             Consultar veículo
           </button>
@@ -168,3 +168,4 @@
     </div>
   </div>
 </section>
+
