--- a/src/app/pages/selection-debit/selection-debit.component.html
+++ b/src/app/pages/selection-debit/selection-debit.component.html
@@ -1,3 +1,3 @@
-<section class="selection-page">
+<section class="selection-debit">
   <!-- Página em branco para redirecionamento após consulta do RENAVAM -->
 </section>
