--- a/src/app/pages/consulta-veicular/consulta-veicular.component.scss
+++ b/src/app/pages/consulta-veicular/consulta-veicular.component.scss
@@ -81,6 +81,7 @@ h1 {
   max-width: 540px;
   color: #ffffff;
   margin: 0 0 2px;
+  font-weight: 600;
 }
 
 .highlight {
@@ -846,7 +847,7 @@ h1 {
   }
 
   h1 {
-    font-size: 2.4rem;
+    font-size: 2.8rem;
     color: ui.$color-dark;
   }
 
